# aurcat

./: Cargo.toml  README.md
firefox-nightly-bin/: firefox-nightly.desktop
src/: clear_cache.rs  cli.rs  config.rs  install.rs  list.rs  main.rs  remove_lock.rs  search.rs  uninstall.rs  update.rs  update_keys.rs  utils.rs
src/aur/: mod.rs
src/clean/: mod.rs
src/cli/: mod.rs
src/install/: mod.rs
src/list/: mod.rs
src/pacman/: mod.rs
src/paths/: mod.rs
src/search/: mod.rs
src/settings/: mod.rs
src/uninstall/: mod.rs
src/update/: mod.rs
src/utils/: mod.rs
