[package]
name = "aurcat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
inquire = "0.7.5"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
term_size = "0.3.2"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
