[package]
name = "aurcat"
description = "An user friendly pacman/aur manager"
license = "MIT"
authors = ["Whiskers-Apps"]
repository = "https://github.com/Whiskers-Apps/aurcat"
keywords = ["AUR", "Pacman" , "Arch", "Linux"]
version = "0.0.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
inquire = "0.7.5"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
term_size = "0.3.2"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
