[package]
name = "aurcat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
convert_case = "0.8.0"
dirs = "6.0.0"
encoding_rs = "0.8.35"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sniffer-rs = "1.1.2"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
